feat: completed exercise 1 & exercise 1 extra credit

--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -1,19 +1,14 @@
 <!-- Basic JavaScript-rendered Hello World -->
 <!-- http://localhost:3000/isolated/exercise/01.html -->
 
-<!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
-<!-- 🐨 Then create a <script type="module"> for your JavaScript -->
-<!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
-<!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
-<!--   📜 https://github.com/mdn/js-examples/tree/master/module-examples -->
-
-<!-- These next instructions are to be written in JavaScript in the <script> tag -->
-<!-- 🐨 Create a div -->
-<!--   💰 document.createElement('div') -->
-
-<!-- 🐨 Set the div's textContent to 'Hello World' and className to 'container' -->
-<!--   💰 div.textContent = '...' -->
-
-<!-- 🐨 Append the div to the root div using `append` -->
-<!--   💰 document.getElementById('root') -->
-<!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+<html lang="en">
+  <body>
+    <div id="root"></div>
+    <script type="module">
+      // 👩🏻‍🦱 Let’s go with something a bit more semantially-rich
+      const h1 = document.createElement('h1')
+      h1.textContent = 'Hello World'
+      document.getElementById('root').append(h1)
+    </script>
+  </body>
+</html>
