chore: changed root element const name in exercise 1 to match exercise 2

--- a/src/exercise/01.extra-1.html
+++ b/src/exercise/01.extra-1.html
@@ -6,13 +6,13 @@
   <body>
     <script type="module">
       // 👩🏻‍🦱 Create the root node, using JS
-      const root = document.createElement('div')
-      root.id = 'root'
+      const rootElement = document.createElement('div')
+      rootElement.id = 'root'
       document.body.append(root)
       // 👩🏻‍🦱 Add the h1 to the root
       const h1 = document.createElement('h1')
       h1.textContent = 'Hello World'
-      root.append(h1)
+      rootElement.append(h1)
     </script>
   </body>
 </html>
