--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -8,7 +8,7 @@
   <script type="module">
     const rootElement = document.getElementById('root')
     // 👩🏻‍🦱 Copied & pasted from the markdown file for this exercise
-    const elementProps = {id: 'main-heading', children: 'Hello world!'}
+    const elementProps = {id: 'main-heading', children: 'Hello World'}
     const elementType = 'h1'
     const reactElement = React.createElement(elementType, elementProps)
     const root = ReactDOM.createRoot(rootElement)
