--- a/src/exercise/04.extra-1.html
+++ b/src/exercise/04.extra-1.html
@@ -1,5 +1,6 @@
 <!-- Creating custom components -->
-<!-- http://localhost:3000/isolated/exercise/04.html -->
+<!-- 💯 using a custom component with React.createElement -->
+<!-- http://localhost:3000/isolated/exercise/04.extra-1.html -->
 
 <body>
   <div id="root"></div>
@@ -10,8 +11,8 @@
     const message = children => <div className="message">{children}</div>
     const element = (
       <div className="container">
-        {message({children: 'Hello World'})}
-        {message({children: 'Goodbye World'})}
+        {React.createElement(message, {children: 'Hello World'})}
+        {React.createElement(message, {children: 'Goodbye World'})}
       </div>
     )
     ReactDOM.createRoot(document.getElementById('root')).render(element)
