--- a/src/exercise/04.extra-2.html
+++ b/src/exercise/04.extra-2.html
@@ -1,5 +1,6 @@
 <!-- Creating custom components -->
-<!-- http://localhost:3000/isolated/exercise/04.html -->
+<!-- 💯 using a custom component with JSX -->
+<!-- http://localhost:3000/isolated/exercise/04.extra-2.html -->
 
 <body>
   <div id="root"></div>
@@ -7,11 +8,11 @@
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-    const message = children => <div className="message">{children}</div>
+    const Message = children => <div className="message">{children}</div>
     const element = (
       <div className="container">
-        {message({children: 'Hello World'})}
-        {message({children: 'Goodbye World'})}
+        <Message>Hello World</Message>
+        <Message>Goodbye World</Message>
       </div>
     )
     ReactDOM.createRoot(document.getElementById('root')).render(element)
