--- a/src/exercise/02.extra-1.html
+++ b/src/exercise/02.extra-1.html
@@ -1,4 +1,5 @@
 <!-- Intro to raw React APIs -->
+<!-- 💯 nesting elements -->
 <!-- http://localhost:3000/isolated/exercise/02.extra-1.html -->
 
 <body>
